--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "tailwind-merge": "^2.2.2",
