--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "tailwind-merge": "^2.2.2",
